# mindzj

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
.vite-cache/vitest/: results.json
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
dist-electron/: main.js  preload.js
docs/: AI_USAGE_ZH.md  BUILD_RELEASES.md  CLI_API.md  PACKAGING.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_ZH.md
scripts/: bump-version.mjs  clean-bundle.mjs
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/default_plugins/mindzj/: data.json  main.js  manifest.json
src-tauri/resources/default_plugins/timestamp_header/: main.js  manifest.json
src-tauri/src/: keyboard_hook.rs  lib.rs  main.rs
src-tauri/src/api/: mod.rs  plugin_api.rs  screenshot_api.rs  search_api.rs  settings_api.rs  vault_api.rs
src-tauri/src/kernel/: error.rs  links.rs  mod.rs  search.rs  types.rs  vault.rs  watcher.rs
src/components/common/: CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  FilePreview.tsx  GotoLinePanel.tsx  ImageViewer.tsx  StatusBar.tsx  TitleBar.tsx  WelcomeScreen.tsx
src/components/editor/: Editor.tsx  ReadingFindPanel.tsx  ReadingView.tsx  Toolbar.tsx
src/components/editor/extensions/: blockWidgets.ts  linkHandler.ts  listContinuation.ts  listStyleExtension.ts  listUtils.test.ts  listUtils.ts  livePreview.ts  searchCounter.ts  searchFlash.ts  searchPanel.ts  sourceHeadingLine.ts
src/components/screenshot/: ScreenshotOverlay.tsx
src/components/settings/: SettingsModal.tsx  controls.tsx
src/components/sidebar/: Backlinks.tsx  Calendar.tsx  FileTree.tsx  Outline.tsx  SearchPanel.tsx
src/components/tabs/: TabBar.tsx
src/i18n/: index.ts
src/plugin-api/: index.ts
src/stores/: ai.ts  editor.ts  findState.ts  plugins.ts  settings.ts  vault.ts  workspace.ts
src/styles/: editor.css  variables.css
src/styles/themes/: atom-dark.css  atom-light.css  catppuccin-latte.css  catppuccin.css  dracula-light.css  dracula.css  everforest-dark.css  everforest-light.css  github-dark.css  github-light.css  gruvbox-light.css  gruvbox.css  iceberg.css  index.ts  kanagawa.css  mindzj-dark-warm.css  mindzj-light-warm.css  monokai.css  nord.css  one-dark.css  one-light.css  papercolor-light.css  rose-pine-dawn.css  rose-pine.css  solarized-dark.css  solarized-light.css  sublime-dark.css  sublime-light.css  tokyo-night-light.css  tokyo-night.css  zenburn.css
src/utils/: autoLink.test.ts  autoLink.ts  displayName.ts  fileTypes.ts  imageInteraction.ts  imageSize.ts  linkUpdater.ts  mindzjMindmap.test.ts  mindzjMindmap.ts  openFileRouted.ts  vaultPaths.ts  windowState.ts
