[package]
name = "mindzj-cli"
version = "0.1.4"
description = "MindZJ CLI - command-line interface for MindZJ note vaults"
authors = ["SuperJohn"] 
license = "AGPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "mindzj"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dirs = "6"
colored = "2"
