[package]
name = "mindzj"
version = "0.1.0"
description = "AI-native, CLI-first, open-source local note-taking system"
authors = ["SuperJohn"] 
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mindzj_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["protocol-asset", "image-png", "devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system watching
notify = "7"

# Full-text search
tantivy = "0.22"

# SQLite for metadata index
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# File-based tracing output (Windows release builds are GUI-subsystem
# and have no stdout, so we tee logs to %LOCALAPPDATA%/MindZJ/logs/
# for post-mortem diagnosis).
tracing-appender = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Path utilities
dirs = "6"

# Hashing (for file integrity, API keys)
sha2 = "0.10"
hex = "0.4"

# Secure random
rand = "0.8"

# URL encoding for window params
urlencoding = "2"

# Keyring (system credential storage for API keys)
keyring = "3"

# Base64 encoding/decoding (for binary file writes from frontend)
base64 = "0.22"

# Screenshot capture (cross-platform screen capture).
#
# Pinned to 0.9.x (the current stable) rather than the older
# 0.0.14 we used to ship because 0.0.14 has a Rust type-
# inference regression on macOS that breaks GitHub Actions
# builds on `macos-latest`:
#
#   error[E0282]: type annotations needed
#     --> xcap-0.0.14/src/macos/boxed.rs:22
#
# The `image` feature gates xcap's `RgbaImage -> image::ImageBuffer`
# conversion, which is what we use to encode PNGs in
# `api/screenshot_api.rs` via `img.write_to(&mut buf, ...)`.
xcap = { version = "0.9", features = ["image"] }

# Image encoding (PNG encoding for screenshot data)
image = { version = "0.25", default-features = false, features = ["png"] }

# Graceful Ctrl+C handling so `tauri dev` exits 0 instead of 0xC000013A
ctrlc = "3"

# Windows-only: low-level keyboard hook (`WH_KEYBOARD_LL`) used to
# catch Ctrl+Alt+Left/Right tab-switch shortcuts BEFORE Intel/AMD
# graphics drivers can intercept them for screen rotation. Running
# the hook at the kernel-mode keyboard driver exit point is the
# only reliable way to claim this shortcut on Windows; webview-level
# DOM keydown never sees it if the driver grabbed it first, and
# `RegisterHotKey` (which `tauri-plugin-global-shortcut` uses) sits
# ABOVE the driver hook table so it also loses the race.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
# Used from the Tauri `setup()` hook to flip the WebView2
# `AreBrowserAcceleratorKeysEnabled` setting to `false`. Without that,
# WebView2 swallows accelerator keystrokes like Ctrl+F / F5 / Alt-menu
# activation before the DOM keydown listener has a chance to handle
# them — which was letting Alt+G (or similar) pop up WebView2's
# built-in find dialog when focus wasn't inside the editor.
#
# The version is pinned to match Tauri 2.10's transitive dep so Cargo
# doesn't link two copies of webview2-com into the final binary.
webview2-com = "0.38"
# `webview2-com-sys 0.38` is generated against `windows-core 0.61`, so
# its COM interfaces only implement the `Interface` trait from that
# version. We keep our own `windows = "0.58"` for the keyboard-hook
# module, and add a separate `windows-core = "0.61"` dep purely so the
# `cast::<ICoreWebView2Settings3>()` call in
# `disable_webview2_browser_accelerator_keys` can resolve the right
# trait impl.
windows-core = "0.61"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
